(fix) some misspellings and add improve error text readability

--- a/src/app/components/sections/product/product-form-component/product-form-component.css
+++ b/src/app/components/sections/product/product-form-component/product-form-component.css
@@ -75,3 +75,10 @@ button:disabled {
   background-color: var(--disabled-button-color);
   color: var(--disabled-button-text-color)
 }
+
+.error-msg {
+  color: var(--error-color);
+  white-space: wrap;
+  text-align: center;
+}
+
