--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,8 @@
 
   --disabled-card-color: rosybrown;
 
+  --error-color: #FF80AB;
+
   font-family: "BreeSerif-regular", serif;
 
   box-sizing: border-box;
